Change the background of HomeScreenVC to lightGray

--- a/MSDynamicsDrawerViewController_Sample1/Base.lproj/Main.storyboard
+++ b/MSDynamicsDrawerViewController_Sample1/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BaM-La-JPB">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -61,7 +60,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="N0I-Wd-FQk" firstAttribute="top" secondItem="UZn-5V-N08" secondAttribute="bottom" constant="79" id="LO2-Gb-FaH"/>
                             <constraint firstItem="N0I-Wd-FQk" firstAttribute="centerX" secondItem="WLy-Gt-LoP" secondAttribute="centerX" id="gVQ-8C-QuP"/>
